fix wrapping links, add links to mosaic

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -64,7 +64,7 @@
 
         a {
           margin-right: 0.5em;
-          white-space: nowrap;
+          display: inline-block;
         }
       }
     }
